# 13X005-AI

./: README.md  pyproject.toml  report.ipynb  requirements.txt  results.ipynb
assignment1/: README.md  pyproject.toml  requirements.txt  results.ipynb
assignment1/src/nodes/: hanoi_node.py
assignment2/: README.md  pyproject.toml  results.ipynb
assignment2/assignment2/algorithms/: backtracking.py  greedy_search.py  search_algorithms.py
assignment2/assignment2/datastructures/: constraint.py  csp.py  node.py  variable.py
assignment2/assignment2/visualisations/: visualise.py
assignment3/: pyproject.toml  results.ipynb
assignment3/assignment3/algorithms/: minimax.py
assignment3/assignment3/games/othello/: board.py  game.py  game_modified.py
assignment3/assignment3/games/tic_tac_toe/: board.py  game.py
assignment3/assignment3/interfaces/: board.py  game.py
assignment4/: pyproject.toml  results.ipynb
assignment4/assignment4/: utils.py
assignment4/assignment4/algorithms/decision_trees/: id3.py
assignment4/assignment4/data_structures/: node.py
assignment4/data/: data.csv  data_test.csv
assignment5/: pyproject.toml  results.ipynb
assignment5/assignment5/models/classifiers/: logistic_regression.py  naive_bayes.py
assignment5/data/: data_test.csv  data_train.csv
src/: node.py
src/nodes/: hanoi_node.py  hospital_node.py  node_interface.py
src/trees/: bfs.py
