[tool.poetry]
name = "tp1"
version = "0.1.0"
description = "Formalisation"
authors = ["Anthony Christoforou <anthony.christoforou@etu.unige.ch>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
panda = "^0.3.1"
jupyter = "^1.0.0"
matplotlib = "^3.8.0"
networkx = "^3.1"
scipy = "^1.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
